# QuantFlow

./: .gitignore  docker-compose.yml  pyproject.toml
config/: db.py  logging.py  paths.py  settings.py
data/raw/: yfinance_data.csv
data/raw/bitcoin/: bitcoin_historical_data.csv
data/raw/bitcoin/year=2026/month=06/: 2026-06-06.parquet  2026-06-07.parquet  2026-06-11.parquet
data/raw/bitcoin/year=2026/month=6/: 2026-6-3.parquet  2026-6-4.parquet
data/raw/fred/: fred_data.parquet
data/raw/yfinance/: yfinance_data.csv
etl/: extract.py  load.py
etl/extract/: coingecko.py  yahoo.py
etl/extract/historical/: fred.py  yahoo_historical_data.py
etl/extract/incremental/: coingecko.py  fred_incremental.py  yahoo.py
etl/load/: load.py  load_fred_incremental.py  load_yahoo_incremental.py  utility.py
etl/loard/: load.py
pipelines/: pipeline_extract_load_coingecko.py  pipeline_extract_load_fred.py  pipeline_extract_load_yahoo.py
