[project]
name = "quant-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "psycopg2>=2.9.12",
    "pyarrow>=24.0.0",
    "sqlalchemy>=2.0.50",
    "timestamp>=0.0.1",
    "yfinance>=1.3.0",
]
[tool.setuptools.packages.find]
include = ["config*", "etl*"]
