[project]
name = "quant-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
    "timestamp>=0.0.1",
    "yfinance>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "etl"]
